# ordantic

./: .gitignore  .nu-env  Cargo.toml
ordantic/: Cargo.toml
ordantic-derive/: Cargo.toml
ordantic-derive/src/: lib.rs
ordantic-example/: Cargo.toml
ordantic/src/: lib.rs
ordantic/tests/: test_example_model.py
